--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 body {
-  background-color: #fcfcfc;
+  background-color: #d8d8d8;
   font-family: 'Poppins', 'sans-serif';
   font-weight: 800;
 }
